--- a/events/index.html
+++ b/events/index.html
@@ -94,7 +94,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/eventreg/" class="line-height-unset width-100">
-                Event Registration
+                Event Schedule
               </a>
             </li>
           </ul>
@@ -859,57 +859,57 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
     </div>
     <div class="container overflow-x:auto" id="events_table1">
       <table class="table diavlo table-bordered table-hover">
-        <th>S.No.</th><th>Event Name</th><th>Start Time</th><th>Reg. Fee</th><th>Venue</th>
+        <th>S.No.</th><th>Event Name</th><th>DAY</th><th>Start Time</th><th>Reg. Fee</th><th>Venue</th>
         <tr>
-          <td>1</td><td>Quizzical (IT Quiz)</td><td>10:30 (1st Round)<br>12:30 (2nd Round)</td><td>100&#8377 (50&#8377/person in a group of 2)</td><td>LAB - 1</td>
+          <td>1</td><td>Quizzical (IT Quiz)</td><td>27 March</td><td>10:30 (1st Round)<br>12:30 (2nd Round)</td><td>100&#8377 (50&#8377/person in a group of 2)</td><td>LAB - 1</td>
         </tr>
         <tr>
-          <td>2</td><td>Game Of Coding</td><td>11:30 AM</td><td>50 &#8377</td><td>LAB - 2</td>
+          <td>2</td><td>Game Of Codes</td><td>27 March</td><td>11:30 AM</td><td>50 &#8377</td><td>LAB - 2</td>
         </tr>
         <tr>
-          <td>3</td><td>BugVilla</td><td>12:30 PM</td><td>100 &#8377</td><td>LAB - 1</td>
+          <td>3</td><td>BugVilla</td><td>27 March</td><td>12:30 PM</td><td>100 &#8377</td><td>LAB - 1</td>
         </tr>
         <tr>
-          <td>4</td><td>Website Design</td><td>02:00 PM</td><td>100 &#8377</td><td>LAB - 2</td>
+          <td>4</td><td>Website Design</td><td>27 March</td><td>02:00 PM</td><td>100 &#8377</td><td>LAB - 2</td>
         </tr>
         <tr>
-          <td>5</td><td>ChessMate</td><td>12:00 PM</td><td>50 &#8377</td><td>SB - 02</td>
+          <td>5</td><td>ChessMate</td><td>27 March</td><td>12:00 PM</td><td>50 &#8377</td><td>SB - 02</td>
         </tr>
         <tr>
-          <td>6</td><td>Cricket</td><td>11:30 AM</td><td>350 &#8377 each group</td><td>Ground</td>
+          <td>6</td><td>Cricket</td><td>Both Day</td><td>11:30 AM</td><td>350 &#8377 each group</td><td>Ground</td>
         </tr>
         <tr>
-          <td>7</td><td>Treasure Hunt</td><td>11:00 AM</td><td>200&#8377 (50&#8377/person in a team of 4)</td><td>Campus</td>
+          <td>7</td><td>Treasure Hunt</td><td>27 March</td><td>11:00 AM</td><td>200&#8377 (50&#8377/person in a team of 4)</td><td>Campus</td>
         </tr>
         <tr>
-          <td>8</td><td>LAN Gaming</td><td>01:00 PM</td><td>50 &#8377</td><td>SB - 01</td>
+          <td>8</td><td>LAN Gaming</td><td>27 March</td><td>01:00 PM</td><td>50 &#8377</td><td>SB - 01</td>
         </tr>
         <tr>
-          <td>9</td><td>Face Painting</td><td>05:00 PM</td><td>50 &#8377</td><td>Ground</td>
+          <td>9</td><td>Face Painting</td><td>27 March</td><td>05:00 PM</td><td>50 &#8377</td><td>Ground</td>
         </tr>
         <tr>
-          <td>10</td><td>Singing</td><td>10:30 AM</td><td>50 &#8377</td><td>M. A. Ansari Auditorium</td>
+          <td>10</td><td>Singing</td><td>26 March</td><td>10:30 AM</td><td>50 &#8377</td><td>M. A. Ansari Auditorium</td>
         </tr>
         <tr>
-          <td>11</td><td>Ember - Fashion Show</td><td>01:30 PM</td><td>200 &#8377</td><td>M. A. Ansari Auditorium</td>
+          <td>11</td><td>Ember - Fashion Show</td><td>26 March</td><td>01:30 PM</td><td>200 &#8377</td><td>M. A. Ansari Auditorium</td>
         </tr>
         <tr>
-          <td>12</td><td>Dance SOLO</td><td>02:00 PM</td><td>100 &#8377</td><td>M. A. Ansari Auditorium</td>
+          <td>12</td><td>Dance SOLO</td><td>26 March</td><td>02:00 PM</td><td>100 &#8377</td><td>M. A. Ansari Auditorium</td>
         </tr>
         <tr>
-          <td>13</td><td>Dance GROUP</td><td>04:00 PM</td><td>500 &#8377 each Group</td><td>M. A. Ansari Auditorium</td>
+          <td>13</td><td>Dance GROUP</td><td>26 March</td><td>04:00 PM</td><td>500 &#8377 each Group</td><td>M. A. Ansari Auditorium</td>
         </tr>
         <tr>
-          <td>14</td><td>Couch Potato</td><td>12:00 PM</td><td>50&#8377/person in Group</td><td>Seminar Room</td>
+          <td>14</td><td>Couch Potato</td><td>26 March</td><td>12:00 PM</td><td>50&#8377/person in Group</td><td>Seminar Room</td>
         </tr>
         <tr>
-          <td>15</td><td>Photography</td><td> --- </td><td>50 &#8377</td><td>Online</td>
+          <td>15</td><td>Photography</td> --- <td> --- </td><td>50 &#8377</td><td>Online</td>
         </tr>     
         <tr>
-          <td>16</td><td>Hands-On Workshop (Day 1)<br>Linux, IRC</td><td>01:30 PM</td><td>50 &#8377</td><td>SB - 02</td>
+          <td>16</td><td>Hands-On Workshop (Day 1)<br>Linux, IRC</td><td>26 March</td><td>01:30 PM</td><td>50 &#8377</td><td>SB - 02</td>
         </tr>
         <tr>
-          <td>17</td><td>Hands-On Workshop (Day 2)<br>GIT, GitHub</td><td>01:30 PM</td><td>100 &#8377</td><td>SB - 02</td>
+          <td>17</td><td>Hands-On Workshop (Day 2)<br>GIT, GitHub</td><td>27 March</td><td>01:30 PM</td><td>100 &#8377</td><td>SB - 02</td>
         </tr>
       </table>
     </div>
@@ -949,7 +949,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
           <a href="/eventreg/" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-            <span>Register For<br>Events</span>
+            <span>Event Schedule</span>
           </a>
         </div>
         <!-- //.col-sm-4 -->
