--- a/404.html
+++ b/404.html
@@ -181,7 +181,7 @@ Bouncing Tumbleweed Adapted from @Aidan_Breen from 'https://codepen.io/aido179-1
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/eventreg/" class="line-height-unset width-100">
-                Event Registration
+                Event Schedule
               </a>
             </li>
           </ul>
