--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -92,7 +92,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/eventreg/" class="line-height-unset width-100">
-                Event Registration
+                Event Schedule
               </a>
             </li>
           </ul>
@@ -485,7 +485,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
           <a href="/eventreg/" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-            <span>Register For<br>Events</span>
+            <span>Event Schedule</span>
           </a>
         </div>
         <!-- //.col-sm-4 -->
