--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/eventreg/" class="line-height-unset width-100">
-                Event Schedule
+                Register [Day 2]
               </a>
             </li>
           </ul>
@@ -131,9 +131,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       Jamia Millia Islamia
                     </h4><br><br>
-                    <!-- <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">
-                      Check Schedule For Teknothon
-                    </a>  -->
+                     <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">
+                      Register [Day 2]
+                    </a> 
                   </div>
                   <!-- //.col-md-10 -->
                 </div>
@@ -166,9 +166,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       Jamia Millia Islamia
                     </h4> <br><br>
-                    <!-- <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">
-                      Check Schedule For Teknothon
-                    </a>  -->
+                    <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">
+                      Register [Day 2]
+                    </a>
                   </div>
                   <!-- //.col-sm-4 -->
                   <!-- //.col-md-10 -->
@@ -202,9 +202,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       Jamia Millia Islamia
                     </h4><br><br>
-                    <!-- <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">
-                      Check Schedule For Teknothon
-                    </a>  -->
+                    <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">
+                      Register [Day 2]
+                    </a>
                   </div>
                   <!-- //.col-md-10 -->
                 </div>
@@ -390,7 +390,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
             <a href="/eventreg/" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-              <span>Register for<br>Events</span>
+              <span>Register [Day 2]</span>
             </a>
         </div>
         <!-- //.col-sm-4 -->
