--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -58,7 +58,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
 
   <!-- Color skin -->
   <link rel="stylesheet" href="../res/css/color_blue.css">
-  <script src="../res/js/paytm.js"></script>
+  <script src="../res/js/register.js"></script>
 
 
 
