Couch Potato to 27

--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -112,7 +112,8 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                           <div class="text-center col-md-7 mx-auto">
                             <img class="img-fluid d-block rounded mx-auto" src="../res/images/teknothon-logo.png" width="50%" height="50%">
                             <h1 class="text-success slant text-uppercase"><br><b>Event Registration</b></h1>
-                            <p class="lead diavlo">Register for your favourite event(s) before the seats run out. There are limited seats for every Event.&nbsp;</p>
+                            <marquee class="diavlo text-uppercase">Couch Potato Shifted to Day 2</marquee>
+                            <p class="lead diavlo"><b>Register for your favourite event(s) before the seats run out. There are limited seats for every Event.</b>&nbsp;</p>
                           </div>
                         </div>
                       </div>
@@ -182,7 +183,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                                             <label class="lbl" for="doodle"><input type="checkbox" class="event_checks"     value=100 id="doodle" name="WEBSITE DESIGN"/>DOODLE - WEBSITE DESIGN COMPETITION (&#8377 100) : </label><br>
                                                             <!-- <label class="lbl" for="ember"><input type="checkbox" class="event_checks"      value=200 id="ember" name="EMBER-THE FASHION SHOW"/>EMBER-THE FASHION SHOW (&#8377 200) : </label><br> -->
                                                             <!-- <label class="lbl" for="sargam"><input type="checkbox" class="event_checks"     value=50 id="sargam" name="SARGAM-THE SINGING COMPETITION"/>SARGAM-THE SINGING COMPETITION (&#8377 50) : </label><br> -->
-                                                            <!-- <label class="lbl" for="couch"><input type="checkbox" class="event_checks"      value=50 id="couch" name="COUCH-POTATO"/>COUCH-POTATO COMPETITION (&#8377 50) : </label><br> -->
+                                                            <label class="lbl" for="couch"><input type="checkbox" class="event_checks"      value=50 id="couch" name="COUCH-POTATO"/>COUCH-POTATO COMPETITION (&#8377 50) : </label><br>
                                                             <label class="lbl" for="face"><input type="checkbox" class="event_checks"       value=50 id="face" name="FACE PAINTING"/>BRUSH STROKES - FACE PAINTING (&#8377 50) : </label><br>
                                                             <label class="lbl" for="chess"><input type="checkbox" class="event_checks"      value=50 id="chess" name="CHESSMATE"/>CHESSMATE - CHESS Tournament (&#8377 50) : </label><br>   <br>
                                                          <!--   <label for=""><input type="checkbox" class="event_checks" value=50 name="PIXELS-THE PHOTOGRAPHY COMPETITION"/>PIXELS-THE PHOTOGRAPHY COMPETITION</label><br>-->
