--- a/index.html
+++ b/index.html
@@ -131,9 +131,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       Jamia Millia Islamia
                     </h4><br><br>
-                     <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">
-                      Register [Day 2]
-                    </a> 
+                    <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">Register</a><a href="/events/#events_table" class="btn btn-base-color sm-btn-medium btn-large">Schedule</a> 
                   </div>
                   <!-- //.col-md-10 -->
                 </div>
@@ -166,9 +164,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       Jamia Millia Islamia
                     </h4> <br><br>
-                    <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">
-                      Register [Day 2]
-                    </a>
+                    <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">Register</a><a href="/events/#events_table" class="btn btn-base-color sm-btn-medium btn-large">Schedule</a> 
                   </div>
                   <!-- //.col-sm-4 -->
                   <!-- //.col-md-10 -->
@@ -202,9 +198,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       Jamia Millia Islamia
                     </h4><br><br>
-                    <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">
-                      Register [Day 2]
-                    </a>
+                    <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">Register</a><a href="/events/#events_table" class="btn btn-base-color sm-btn-medium btn-large">Schedule</a> 
                   </div>
                   <!-- //.col-md-10 -->
                 </div>
