--- a/404.html
+++ b/404.html
@@ -181,7 +181,7 @@ Bouncing Tumbleweed Adapted from @Aidan_Breen from 'https://codepen.io/aido179-1
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/eventreg/" class="line-height-unset width-100">
-                Register [Day 2]
+                Schedule
               </a>
             </li>
           </ul>
@@ -256,7 +256,7 @@ Bouncing Tumbleweed Adapted from @Aidan_Breen from 'https://codepen.io/aido179-1
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
           <a href="/eventreg/" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-            <span>Register [Day 2]</span>
+            <span>Schedule</span>
           </a>
         </div>
         <!-- //.col-sm-4 -->
