--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/eventreg/" class="line-height-unset width-100">
-                Register [Day 2]
+                Schedule
               </a>
             </li>
           </ul>
@@ -131,7 +131,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       Jamia Millia Islamia
                     </h4><br><br>
-                    <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">Register</a><a href="/events/#events_table" class="btn btn-base-color sm-btn-medium btn-large">Schedule</a> 
+                    <a href="/events/#events_table" class="btn btn-base-color sm-btn-medium btn-large">Schedule</a> 
                   </div>
                   <!-- //.col-md-10 -->
                 </div>
@@ -164,7 +164,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       Jamia Millia Islamia
                     </h4> <br><br>
-                    <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">Register</a><a href="/events/#events_table" class="btn btn-base-color sm-btn-medium btn-large">Schedule</a> 
+                    <a href="/events/#events_table" class="btn btn-base-color sm-btn-medium btn-large">Schedule</a> 
                   </div>
                   <!-- //.col-sm-4 -->
                   <!-- //.col-md-10 -->
@@ -198,7 +198,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       Jamia Millia Islamia
                     </h4><br><br>
-                    <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">Register</a><a href="/events/#events_table" class="btn btn-base-color sm-btn-medium btn-large">Schedule</a> 
+                    <a href="/events/#events_table" class="btn btn-base-color sm-btn-medium btn-large">Schedule</a> 
                   </div>
                   <!-- //.col-md-10 -->
                 </div>
@@ -384,7 +384,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
             <a href="/eventreg/" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-              <span>Register [Day 2]</span>
+              <span>Schedule</span>
             </a>
         </div>
         <!-- //.col-sm-4 -->
