--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -122,8 +122,8 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                         <div class="row">
                           <div class="col-md-8 order-md-1 center-block">
                             <h1 class="slant text-center text-base-color">Online Registrations have been Closed </h1>
-                            <h2 class="diavlo text-center">But There are still some Slots available OnSpot</h2>  
-                            <img src="closed.png" class="center-block"/>
+                            <h2 class="diavlo text-center">But There are still some Slots available OnSpot, Kindly Register at our Desk</h2>  
+                            <img src="offline.png" class="center-block"/>
                             <div class="text-center diavlo">
                               <h3 class="text-center"><strong class="diavlo">Kindly Check Our Event Schedule for The Teknothon Events [26,27 March]</strong></h3>
                               <br>
