--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -19,7 +19,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <!-- Title, icon, description and keywords -->
-  <title>EVENT Registration | TEKNOTHON 2018</title>
+  <title>EVENT Registration | TEKNOTHON 2019</title>
   <link rel="shortcut icon" href="../res/images/favicon.ico">
   <meta name="description" content="TEKNOTHON - A Techno-Cultural event Organized by Department of Computer Science JMI. This March, at Jamia Millia Islamia.">
   <meta name="keywords" content="Teknothon, JMI, Jamia Millia Islamia, New Delhi, event">
@@ -94,7 +94,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                   <li><a href="/events/" class="line-height-unset">Events</a></li>
                   <li><a href="/sponsors/" class="line-height-unset">Sponsors</a></li>
                   <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
-                  <li><a href="#page-top" class="page-scroll">Schedule</a></li>
+                  <li><a href="#page-top" class="page-scroll">Register</a></li>
                 </ul>
               </div>
               <!-- //.navbar-collapse -->
@@ -121,9 +121,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                       <div class="container">
                         <div class="row">
                           <div class="col-md-8 order-md-1 center-block">
-                            <h1 class="slant text-center text-base-color">Online Registrations have been Closed </h1>
-                            <h2 class="diavlo text-center">But There are still some Slots available OnSpot, Kindly Register at our Desk</h2>  
-                            <img src="offline.png" class="center-block"/>
+                            <h1 class="slant text-center text-base-color">Online Registrations are not open yet... </h1>
+                            <h2 class="diavlo text-center">Stay Tuned, We will be opening registrations very soon...</h2>  
+                            <!-- <img src="offline.png" class="center-block"/> -->
                             <div class="text-center diavlo">
                               <h3 class="text-center"><strong class="diavlo">Kindly Check Our Event Schedule for The Teknothon Events [26,27 March]</strong></h3>
                               <br>
@@ -134,7 +134,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                           </div>
                         </div>
                       </div>
-                    </div>
+                    </div><br>
                   <span class="bg-gray-light-2 separator-line-full"></span>
                 </section>
 
@@ -148,7 +148,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                 Date &amp; Time
               </span>
               <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-                March 26,27 2018<br>
+                March 12,13 2019<br>
                 10 AM to 5 PM
               </p>
             </div>
