--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -19,7 +19,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>Sponsors | TEKNOTHON 2018</title>
+  <title>Sponsors | TEKNOTHON 2019</title>
   <link rel="shortcut icon" href="../res/images/favicon.ico">
   <meta name="description" content="TEKNOTHON - A Techno-Cultural event Organized by Department of Computer Science JMI. This March, at Jamia Millia Islamia.">
   <meta name="keywords" content="Teknothon, JMI, Jamia Millia Islamia, New Delhi, event">
@@ -92,7 +92,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/eventreg/" class="line-height-unset width-100">
-                Schedule
+                Register
               </a>
             </li>
           </ul>
@@ -440,7 +440,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             <div class="col-xs-12 col-sm-6 display-inline-block xs-margin-12 xs-no-margin-rl xs-no-margin-bottom">
               <i class="fa fa-phone display-block text-base-color title-extra-large"></i>
               <span class="sponsor display-block margin-5 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-extra-large title-small">
-                +91 96503 89803
+                +91 8840849165 (Zakir)
               </span>
             </div>
             <!-- //.display-inline-block -->
@@ -465,7 +465,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             Date &amp; Time
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            March 26,27 2018<br>
+            March 12,13 2019<br>
             10 AM to 5 PM
           </p>
         </div>
