--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>About Us | TEKNOTHON 2018 - About</title>
+  <title>About Us | TEKNOTHON 2019 - About</title>
   <link rel="shortcut icon" href="res/images/favicon.ico">
   <meta name="description" content="TEKNOTHON - A Techno-Cultural event Organized by Department of Computer Science JMI. This March, at Jamia Millia Islamia.">
   <meta name="keywords" content="Teknothon, JMI, Jamia Millia Islamia, New Delhi, event">
@@ -93,7 +93,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             <li><a href="/contact/" class="page-scroll">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/eventreg/" class="line-height-unset width-100">
-                Schedule
+                Register
               </a>
             </li>
           </ul>
@@ -179,7 +179,7 @@ Jamia Millia Islamia (translation: National Islamic University) is a public cent
             Date &amp; Time
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            March 26,27 2018<br>
+            March 12,13 2019<br>
             10 AM to 5 PM
           </p>
         </div>
