--- a/contact/index.html
+++ b/contact/index.html
@@ -19,7 +19,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>Contact Us | TEKNOTHON 2018</title>
+  <title>Contact Us | TEKNOTHON 2019</title>
   <link rel="shortcut icon" href="res/images/favicon.ico">
   <meta name="description" content="TEKNOTHON - A Techno-Cultural event Organized by Department of Computer Science JMI. This March, at Jamia Millia Islamia.">
   <meta name="keywords" content="Teknothon, JMI, Jamia Millia Islamia, New Delhi, event">
@@ -93,7 +93,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             <li><a href="#page-top" class="page-scroll">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/eventreg/" class="line-height-unset width-100">
-                Schedule
+                Register
               </a>
             </li>
           </ul>
@@ -134,9 +134,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="row text-center"><br>
             
             <h4 class="font-weight-300 diavlo letter-spacing-1">
-              <p>Tanzeel  :  </p><i class="fa fa-mobile"></i> 9650389803<br>
+              <p>Imran Abbas  :  </p><i class="fa fa-mobile"></i>+91 7011306934<br>
             </h4> <br><h4 class="font-weight-300 diavlo letter-spacing-1">
-              <p>Nabeela  :  </p><i class="fa fa-mobile"></i> 9650386980<br>
+              <p>Zakir Hassan  :  </p><i class="fa fa-mobile"></i>+91 8840849165<br>
             </h4>
           </div>
           <!-- //.row -->
@@ -235,7 +235,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             Date &amp; Time
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            March 26,27 2018<br>
+            March 12,13 2019<br>
             10 AM to 5 PM
           </p>
         </div>
