--- a/events/index.html
+++ b/events/index.html
@@ -94,7 +94,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/eventreg/" class="line-height-unset width-100">
-                Schedule
+                Register
               </a>
             </li>
           </ul>
