--- a/contact/index.html
+++ b/contact/index.html
@@ -255,7 +255,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
           <a href="/eventreg/" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-            <span>Schedule</span>
+            <span>Register</span>
           </a>
         </div>
         <!-- //.col-sm-4 -->
