--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -125,9 +125,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                             <h2 class="diavlo text-center">Stay Tuned, We will be opening registrations very soon...</h2>  
                             <!-- <img src="offline.png" class="center-block"/> -->
                             <div class="text-center diavlo">
-                              <h3 class="text-center"><strong class="diavlo">Kindly Check Our Event Schedule for The Teknothon Events [26,27 March]</strong></h3>
+                              <!-- <h3 class="text-center"><strong class="diavlo">Kindly Check Our Event Schedule for The Teknothon Events [12,13 March]</strong></h3>
                               <br>
-                              <a href="/events/#events_table" class="text-center btn btn-base-color sm-btn-medium btn-large">Schedule</a>
+                              <a href="/events/#events_table" class="text-center btn btn-base-color sm-btn-medium btn-large">Schedule</a> -->
                               <!-- <img src="schedule.jpg"/> -->
                             </div>
 
