--- a/events/index.html
+++ b/events/index.html
@@ -128,9 +128,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <h3 class="diavlo font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-sideline-base-color">
             Events :
           </h3><br><hr>
-          <a href="#events_table" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
+          <!-- <a href="#events_table" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
             <span><i class="fa fa-toggle-down"></i> Check Event Schedule <i class="fa fa-toggle-down"></i></span>
-          </a>
+          </a> -->
           <p class="margin-5 diavlo no-margin-rl text-gray-dark-2">
             Following are the Events that will be Organized at Teknothon 2019.
           </p>
@@ -799,7 +799,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
     <!-- //.container -->
   </section>
   <!-- //Section - Team End -->
-  <h1><center class="diavlo">Event Schedule for Teknothon 2019</center></h1>
+  <!-- <h1><center class="diavlo">Event Schedule for Teknothon 2019</center></h1> -->
   <section class="bg-white" id="events_table">      
     <div class="container overflow-x:auto" style="display:none" id="events_table2">
       <table class="table diavlo table-bordered table-hover">
@@ -857,7 +857,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         </tr>
       </table>
     </div>
-    <div class="container overflow-x:auto" id="events_table1">
+    <!-- <div class="container overflow-x:auto" id="events_table1">
       <table class="table diavlo table-bordered table-hover">
         <th>S.No.</th><th>Event Name</th><th>DAY</th><th>Start Time</th><th>Reg. Fee</th><th>Venue</th>
         <tr>
@@ -912,7 +912,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <td>17</td><td>Hands-On Workshop (Day 2)<br>GIT, GitHub</td><td>27 March</td><td>01:30 PM</td><td>100 &#8377</td><td>SB - 02</td>
         </tr>
       </table>
-    </div>
+    </div> -->
     <div class="col-md-8 col-md-offset-2 text-center">
    </div>
   </section>
