--- a/about/index.html
+++ b/about/index.html
@@ -199,7 +199,7 @@ Jamia Millia Islamia (translation: National Islamic University) is a public cent
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
           <a href="/eventreg/" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-            <span>Schedule</span>
+            <span>Register</span>
           </a>
         </div>
         <!-- //.col-sm-4 -->
